--- a/bower.json
+++ b/bower.json
@@ -10,16 +10,16 @@
     "lens",
     "ramda"
   ],
-  "homepage": "https://github.com/calmm-js/baret",
+  "homepage": "https://github.com/calmm-js/baret.util",
   "dependencies": {
-    "bacon.atom": "^5.0.0",
-    "bacon.combines": "^0.1",
-    "baconjs": "^0.7.94",
-    "baret": "^1.0.0",
     "infestines": "^0.4.4",
+    "baret": "^1.0.0",
+    "bacon.combines": "^0.1",
+    "bacon.atom": "^5.0.0",
     "partial.lenses": "^11.0.0",
-    "prop-types": "^15.5.6",
-    "ramda": "^0.24.0"
+    "react": "^15.0.1",
+    "ramda": "^0.24.0",
+    "bacon": "^0.7.94"
   },
   "ignore": ["*", "!*.md", "!dist/*"]
 }
