--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baret.util",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Utilities for working with Baret",
   "module": "dist/baret.util.es.js",
   "main": "dist/baret.util.cjs.js",
@@ -59,7 +59,7 @@
     "bacon.combines": "^0.1",
     "bacon.atom": "^5.0.0",
     "partial.lenses": "^11.0.0",
-    "prop-types": "^15.5.6",
+    "react": "^15.0.1",
     "ramda": "^0.24.0"
   },
   "peerDependencies": {
