--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baret.util",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Utilities for working with Baret",
   "module": "dist/baret.util.es.js",
   "main": "dist/baret.util.cjs.js",
@@ -42,7 +42,7 @@
     "codecov": "^2.3.1",
     "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.4.0",
-    "baconjs": "^0.7.95",
+    "baconjs": ">=0.7 <3.0",
     "mocha": "^4.0.1",
     "nyc": "^11.2.1",
     "react-dom": "^15.6.1",
@@ -63,6 +63,6 @@
     "ramda": "^0.25.0"
   },
   "peerDependencies": {
-    "baconjs": ">=0.7.94 <2.0"
+    "baconjs": ">=0.7.94 <3.0"
   }
 }
