--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baret.util",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Utilities for working with Baret",
   "module": "dist/baret.util.es.js",
   "main": "dist/baret.util.cjs.js",
@@ -39,26 +39,26 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
-    "codecov": "^2.3.1",
+    "codecov": "^3.0.4",
     "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.4.0",
     "baconjs": ">=0.7 <3.0",
     "mocha": "^4.0.1",
     "nyc": "^11.2.1",
     "react-dom": "^15.6.1",
-    "rollup": "^0.50.0",
+    "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-uglify": "^4.0.0"
   },
   "dependencies": {
     "infestines": "^0.4.5",
     "baret": "^1.0.0",
     "bacon.combines": "^0.1",
     "bacon.atom": "^5.0.0",
-    "partial.lenses": "^13.0.0",
+    "partial.lenses": ">=13.0.0 <15.0.0",
     "react": "^15.0.1",
     "ramda": "^0.25.0"
   },
